# advent-of-code-2020

./: Cargo.toml  pyproject.toml  rust-toolchain
_template/: main.rs
day01/: Cargo.toml
day01/src/: main.dl  main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: input.txt  main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day18/: Cargo.toml
day18/src/: main.rs
day19/: Cargo.toml
day19/src/: main.py  main.rs
day20/: Cargo.toml
day20/src/: main.py  main.rs
day21/: main.py
day22/: main.py
day23/: Cargo.toml  main.py
day23/src/: main.rs
day24/: main.py
day25/: main.py
shared/: Cargo.toml
shared/src/: debug.rs  foldresult.rs  iterators.rs  lib.rs  prelude.rs
